tests/golden/resources/espejote/espejote/10_kustomize/espejote/rbac.authorization.k8s.io_v1_clusterrole_espejote-manager-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: espejote-manager-role
rules:
- apiGroups:
  - ""
  resources:
  - namespaces
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - ""
  resources:
  - serviceaccounts/token
  verbs:
  - create
- apiGroups:
  - ""
  - events.k8s.io
  resources:
  - events
  verbs:
  - create
  - patch
  - update
- apiGroups:
  - admissionregistration.k8s.io
  resources:
  - mutatingwebhookconfigurations
  - validatingwebhookconfigurations
  verbs:
  - create
  - delete
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - espejote.io
  resources:
  - admissions
  - clusteradmissions
  - managedresources
  verbs:
  - create
  - delete
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - espejote.io
  resources:
  - admissions/finalizers
  - clusteradmissions/finalizers
  - managedresources/finalizers
  verbs:
  - update
- apiGroups:
  - espejote.io
  resources:
  - admissions/status
  - clusteradmissions/status
  - managedresources/status
  verbs:
  - get
  - patch
  - update
- apiGroups:
  - espejote.io
  resources:
  - jsonnetlibraries
  verbs:
  - get
  - list
  - watch
